--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
   </head>
   <body>
     <h1>Odin recipes</h1>
+    <h2>List of recipes</h2>
+    <ul>
+      <li>
+        <a href="./recipes//lemonLayerCake.html"
+          >Sybil's Old Fashioned Lemon Layer Cake</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
