Add: some image properties

--- a/recipes/lemonLayerCake.html
+++ b/recipes/lemonLayerCake.html
@@ -12,6 +12,9 @@
     <img
       src="https://www.allrecipes.com/thmb/8lNWFe2Ee5V9-6Rf_iuoAHKHoe8=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/216892sybils-old-fashioned-lemon-layer-cakeKim4x3-42fa480c1356443794bc4ceae0f60c3b.jpg"
       alt="Sybil's Old Fashioned Lemon Layer Cake"
+      height="563"
+      width="750"
+      loading="lazy"
     />
     <h2>Description</h2>
 
