--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           >Sybil's Old Fashioned Lemon Layer Cake</a
         >
       </li>
+      <li>
+        <a href="./recipes/honeyGarlicPorkTenderloin.html"
+          >Honey Garlic Pork Tenderloin</a
+        >
+      </li>
     </ul>
   </body>
 </html>
