Add: Chef John's Roman-Style Chicken recipe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           >Honey Garlic Pork Tenderloin</a
         >
       </li>
+      <li>
+        <a href="./recipes/chefJohnsRoman-StyleChicken.html"
+          >Chef John's Roman-Style Chicken</a
+        >
+      </li>
     </ul>
   </body>
 </html>
