Fix: links to home

--- a/recipes/lemonLayerCake.html
+++ b/recipes/lemonLayerCake.html
@@ -106,6 +106,6 @@
       </li>
     </ol>
 
-    <p><a href="/index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
   </body>
 </html>
