--- a/recipes/chefJohnsRoman-StyleChicken.html
+++ b/recipes/chefJohnsRoman-StyleChicken.html
@@ -115,6 +115,6 @@
       </li>
     </ol>
 
-    <p><a href="/index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
   </body>
 </html>
