--- a/recipes/honeyGarlicPorkTenderloin.html
+++ b/recipes/honeyGarlicPorkTenderloin.html
@@ -98,6 +98,6 @@
       </li>
     </ol>
 
-    <p><a href="/index.html">Home</a></p>
+    <p><a href="../index.html">Home</a></p>
   </body>
 </html>
