--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>List of recipes</h2>
     <ul>
       <li>
-        <a href="./recipes//lemonLayerCake.html"
+        <a href="./recipes/lemonLayerCake.html"
           >Sybil's Old Fashioned Lemon Layer Cake</a
         >
       </li>
